4.0.5 (2018-MM-DD)
------------------

Enhancements
 - [web] show source addressbook of matching contacts in appointment editor (#4579)
 - [web] improve display of keyboard shortcuts
 - [web] show time for messages of yesterday (#4599)
 - [web] fit month view to window size (#4554)

Bug fixes
 - [sogo-tool] fixed "manage-acl unsubscribe" command (#4591)
 - [web] fixed handling of collapsed/expanded mail accounts (#4541)
 - [web] fixed handling of duplicate recipients (#4597)
 - [web] fixed folder export when XSRF validation is enabled (#4502)
 - [web] don't encode filename extension when exporting folders
 - [web] fixed download of HTML body parts
 - [core] don't always fetch the sorting columns
 - [eas] strip '<>' from bodyId and when forwarding mails
 - [eas] fix search on for Outlook application (#4605 and #4607)
 - [eas] improve search operations and results fetching

4.0.4 (2018-10-23)
------------------

Bug fixes
 - [web] fixed time conflict validation when not the owner
 - [web] fixed freebusy display with default theme (#4578)

4.0.3 (2018-10-17)
------------------

Enhancements
 - [web] prohibit subscribing a user with no rights
 - [web] new button to mark a task as completed (#4531)
 - [web] new button to reset Calendar categories to defaults
 - [web] moved the unseen messages count to the beginning of the window's title (#4553)
 - [web] allow export of calendars subscriptions (#4560)
 - [web] hide compose button when reading message on mobile device
 - [web] updated Angular to version 1.7.5
 - [web] updated CKEditor to version 4.10.1

Bug fixes
 - [web] include mail account name in form validation (#4532)
 - [web] calendar properties were not completely reset on cancel
 - [web] check ACLs on address book prior to delete cards
 - [web] fixed condition of copy action on cards
 - [web] fixed display of notification email in calendar properties
 - [web] fixed display of multi-days events when some weekdays are disabled