@@ -1,6 +1,9 @@
 4.0.5 (2018-MM-DD)
 ------------------
 
+New features
+ - [web] dynamic stylesheet for printing calendars (#3650)
+
 Enhancements
  - [web] show source addressbook of matching contacts in appointment editor (#4579)
  - [web] improve display of keyboard shortcuts
